try this to see if buttons are fixed on ios safari

--- a/src/components/styles/one-project.css
+++ b/src/components/styles/one-project.css
@@ -45,6 +45,8 @@
 }
 
 .project-live-code-button {
+	align-items: center;
+	justify-content: center;
 }
 
 .project-live-code-button button {
@@ -116,6 +118,8 @@
 }
 
 .project-live-code-button-dark {
+	align-items: center;
+	justify-content: center;
 }
 
 .project-live-code-button-dark button {
